discord_themes/project_nova/crysis2Hud/projectNova_crysis2Hud_SourrR34.css
@import url(https://stevencaior.github.io/discord_themes/project_nova/projectNova_SourrR34.css);
@import url(https://fonts.googleapis.com/css2?family=Orbitron:wght@100;300;400;500;600;700;800;900&display=swap);

.theme-amoled,
.theme-dark,
.theme-darker,
.theme-light
{
    --watermark: "CRYNET SYSTEMS";

    /**
    --accent-hsl: 192.321 100% 78.039%;
    --accent-2-hsl: 192.321 50% 60%;/**/

    --accent-hue: 192.321;
    --accent-saturation-base: 100%;
    --accent-saturation-coefficient: .5; /*.5*/
    --accent-lightness-base: 78.039%;
    --accent-lightness-coefficient: .7; /*.769*/

    --accent-contrast: #000;

    --font-global: Orbitron, Noto Sans, gg sans, Trebuchet MS, sans-serif;

    --background-image: url(https://i.imgur.com/iBb7wwY.png);
    --background-shading: #0000;

    --home-icon: url(https://i.imgur.com/3KHlCMw.png);

    --popout-color-bottom: #000;

    --modal-background: #080808; /*matches --modal-footer-background*/

    --members-width: 270px;
}

/*-----ADJUSTED WINDOW-----*/
[class*="layers_"] > [class*="layer_"],
#app-mount > div[class*="titleBar"]{
    margin: 0 auto;
    width: 86vw; /*arrow on right is outside*/
}
[class*="layers_"] > [class*="layer_"]{
    border: 3px solid var(--accent);
    border-radius: 10px;
    position: fixed;
}
.platform-web [class*="layers_"] > [class*="layer_"]{
    height: 65vh;
    top: 11vh;
}
.platform-win [class*="layers_"] > [class*="layer_"]{
    height: 55vh;
    top: 16vh;
}
#app-mount > div[class*="titleBar"]{
    background: transparent;
    box-shadow: none;
    position: relative;
    top: calc(16.2vh + 2px); /*always +2px of top property in [class*="layers_"] > [class*="layer_"]*/
    z-index: 1001; /* fix for windows button + watermark appearing over popouts and images */
}
#app-mount > div[class*="titleBar"] > div[aria-label="Close"]{
    border-top-right-radius: 7px;
}
/*-----ERROR PAGE-----*/
.errorPage_2pZ2Kq {
	box-shadow: inset 0 0 500px 10px var(--danger-color);
}
.title_NjUt5y:after{
    content: "Base functions impaired.";
}
.note_Ph806N p:first-child:before{
    content: "Possible corrosive agents:";
}
.note_Ph806N p:first-child:after{
    content: "Plugins";
}
.note_Ph806N p:last-child:before{
    content: "Recommended course of action:";
}
.note_Ph806N p:last-child:after{
    content: "Access the suit's terminal (CTRL + Shift + I or CMD + Alt + I) to diagnose the issue.";
}
/*-----APP DIRECTORY-----*/
[class*="item_"][aria-label="App Directory"]{
    display: none; /*just don't*/
}
/*-----BETTER DISCORD-----*/
/* SCI-FI TOASTS */
.bd-toast{
    background: hsl(var(--accent-hsl) / .3); /*not var(--accent-contrast) so we know where it begins and ends. won't blend in with message area since too low anyways*/
    color: var(--accent);
}
/*-----MISCELLANEOUS-----*/
/* EMBEDS */
[class*="embedFull_"]{
    background: var(--background-secondary-alt);
}

